--- a/Assignment4/Assigment4.Rmd
+++ b/Assignment4/Assigment4.Rmd
@@ -99,11 +99,10 @@ clusplot(Pharma1,fit$cluster,color = TRUE,shade = TRUE,labels = 2,lines = 0)
 #cluster5_ ABT,SGP,WYE,VMY,LLY,AZN,NVS
 
 
-#For Cluster1 has highest Market_cap,ROA,ROE,Asset_Turnover and lowest is Beta,PE_Ratio.
-#For Cluster2 has highest Rev_Growth and lowest PE_Ratio, Asset_Turnover. 
-#For Cluster3 has highest Beta, Leverage and lowest Market_Cap, ROE, ROA, Leverage, Rev_Growth, Net_Profit_Margin.
-#For Cluster4 has highest PE_Ratio and lowest Leverage, Asset_Turnover.
-#For Cluster5 has highest Net_Profit_Margin and lowest leverage,Beta.
+#For Cluster1 They have the highest market_Cap and has Good Leverage value.
+#For Cluster2 They have lowest asset_turnover,and lowest beta.
+#For Cluster3 They have the lowest market capitalization, Leverage and Beta are good. It has #highest revenue growth. #For Cluster4 These have the highest PE_Ratio. ROE value is not good.
+#For Cluster5 They have lowest revenue growth, highest assets turnover and highest #net profit margin.
 
 
 #c) Is there a pattern in the clusters with respect to the numerical variables (10 to 12)? (those not used in 
@@ -113,18 +112,20 @@ clusplot(Pharma1,fit$cluster,color = TRUE,shade = TRUE,labels = 2,lines = 0)
 
 #Clusters 1,2,4,5 has Hold Recommendation,Clusters 1,3 has mostly Moderate Buy Recommendation.
 
+#For cluster 1: It has the highest market_Cap and has Good Leverage value. And they can be moderately recommended.
+#For cluster 2: It has lowest asset_turnover,and lowest beta. But media recommendations are highly positive.
+#For cluster 3: The leverage ratio is high, they are moderately recommended.
+#For cluster 4: It  has the highest PE_Ratio and needs to be held as per the media recommendations.
+#For Cluster 5: They have lowest revenue growth, highest assest turnover and highest net profit margin.
+
 
 #d) Provide an appropriate name for each cluster using any or all of the variables in the dataset. 
 
-#1 cluster- Buy cluster or High beta.
-
-#2 cluster- High Net_Profit_Margin cluster or High hold cluster.
-
-#3 cluster- Hold cluster or Low PE_Ratio. 
-
-#4 cluster-Moderate Buy cluster.
-
-#5 cluster- High Buy cluster.
+#1 cluster- Moderate Buy (or) Hold cluster.
+#2 cluster- Buy or sell cluster.  
+#3 cluster- Buy Cluster - It has good stability. 
+#4 cluster- Hold cluster -They have decent numbers.
+#5 cluster- High Hold cluster.
 
 
 
